fix(style): change cloud position on small, max-width: 767px orientation landscape screens

--- a/static/style.css
+++ b/static/style.css
@@ -1018,10 +1018,10 @@ Style #2
 
 @media only screen and (max-width: 767px) and (orientation:landscape),only screen and (max-width:576px) {
   .p-stairs {
-    -moz-transform: translate(32px, 54px) rotate(30deg) scale(0.5);
-    -ms-transform: translate(32px, 54px) rotate(30deg) scale(0.5);
-    -webkit-transform: translate(32px, 54px) rotate(30deg) scale(0.5);
-    transform: translate(32px, 54px) rotate(30deg) scale(0.5);
+    -moz-transform: translate(0px, 0px) rotate(-30deg) scale(0.4);
+    -ms-transform: translate(0px, 0px) rotate(-30deg) scale(0.4);
+    -webkit-transform: translate(0px, 0px) rotate(-30deg) scale(0.4);
+    transform: translate(0px, 0px) rotate(-30deg) scale(0.4);
   }
 }
 
